se agrega icono

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,14 @@ nav {
     color: #edf0f1;
 }
 
+.contenedor-beadcrumb {
+    background-color: transparent;
+}
+
+.breadcrumb {
+    background-color: transparent;
+}
+
 .container-principal {
     position: relative;
     display: inline-block;
