--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,7 +45,7 @@ nav {
     opacity: 0.5;
 }
 
-.btnCuenta {
+.btn-cuenta {
     padding: .4rem 2rem;
     border-radius: 50px;
     text-decoration: none;
