--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,5 +1,5 @@
 /* Variables */
-$color_tranparente: 'transparent';
+$color_tranparente: transparent;
 $color_negro: #24252A;
 $color_blanco: #edf0f1;
 
@@ -31,6 +31,14 @@ $color_blanco: #edf0f1;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+    transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.btn:hover {
+    transform: scale(0.9);
 }
 
 .btn-cuenta {
