--- a/css/_img.scss
+++ b/css/_img.scss
@@ -10,7 +10,7 @@
 .img {
     width: 100%;
     object-fit: cover;
-    height: 222px;
+    height: 100%;
     margin: auto;
     transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
@@ -23,5 +23,4 @@
     height: 100%;
     object-fit: cover;
     border-radius: 5px;
-    margin-bottom: 20px;
 }
