--- a/css/estilos.css
+++ b/css/estilos.css
@@ -94,7 +94,7 @@ nav {
 .img {
   width: 100%;
   object-fit: cover;
-  height: 222px;
+  height: 100%;
   margin: auto;
   transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
@@ -108,7 +108,6 @@ nav {
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
-  margin-bottom: 20px;
 }
 
 .container-principal {
