--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-/* Variables */
 nav {
   background-color: #24252A;
   color: #edf0f1;
@@ -14,6 +13,11 @@ nav {
 
 .card {
   width: 17rem;
+}
+.card .cont-img {
+  max-width: 100%;
+  height: auto;
+  padding: 0.8rem;
 }
 
 .card-info {
