--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100&display=swap");
 nav {
   background-color: #24252A;
   color: #edf0f1;
@@ -127,19 +128,35 @@ nav ul li {
 .boton {
   background-color: rgb(0, 136, 169);
   color: #edf0f1;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  padding: 0.4rem 2rem;
+  border-radius: 50px;
+  text-decoration: none;
   transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.boton-comprar {
+  background-color: rgb(0, 136, 169);
+  color: #edf0f1;
+  border: none;
+  font-family: "Open Sans", sans-serif;
+  padding: 0.4rem 2rem;
+  border-radius: 50px;
+  text-decoration: none;
+  transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.boton-comprar:hover {
+  background-color: rgba(0, 136, 169, 0.6);
+  color: #edf0f1;
+  transform: scale(0.9);
 }
 
 .boton:hover {
   background-color: rgba(0, 136, 169, 0.6);
   color: #edf0f1;
   transform: scale(0.9);
-}
-
-.btn-cuenta {
-  padding: 0.4rem 2rem;
-  border-radius: 50px;
-  text-decoration: none;
 }
 
 .container-principal {
@@ -156,7 +173,7 @@ nav ul li {
   text-align: center;
   width: 80%;
   max-width: 400px;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   color: #24252A;
   background-color: rgba(255, 255, 255, 0.8);
