--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100&display=swap');
 
 // Variables
 $color_tranparente: transparent;
@@ -27,7 +28,7 @@ $color_blanco: #edf0f1;
     width: 80%;
     max-width: 400px;
 
-    font-family: 'Helvetica Neue', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 18px;
     color: $color_negro;
     background-color: rgba(255, 255, 255, 0.8);
