--- a/css/estilos.css
+++ b/css/estilos.css
@@ -70,34 +70,84 @@ nav {
   }
 }
 nav {
-  font-family: "Montserrat", sans-serif;
-}
-nav ul li {
-  color: rgb(0, 136, 169);
-}
-
-.navbar-toggler {
-  color: #edf0f1;
-}
-
-.bg-nav-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 15%;
   background-color: #24252A;
-}
-
-.texto-nav-footer {
+  width: 100%;
   color: #edf0f1;
 }
-
-.nav-link {
-  color: #edf0f1;
-  transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+nav .titulo-nav {
+  font-size: 40px;
+  margin: 0.5rem;
+  align-self: self-start;
 }
-
-.nav-link:hover {
+nav li {
+  list-style: none;
+  padding: 0px 20px;
+  display: inline-block;
+}
+nav a {
+  transition: all 0.3s ease 0s;
+  color: #edf0f1;
+}
+nav a:hover {
+  color: #0088a9;
   transform: scale(0.9);
-  color: rgb(0, 136, 169);
+}
+nav li, nav a, nav button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
+  transition: all 0.3s ease 0s;
+}
+nav button {
+  padding: 9px 25px;
+  background-color: rgb(0, 136, 169);
+  color: #edf0f1;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+nav button:hover {
+  background-color: rgba(0, 136, 169, 0.8);
+  transform: scale(0.9);
+}
+nav .toggle-button {
+  display: none;
 }
 
+@media screen and (max-width: 768px) {
+  nav {
+    display: inline-block;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  nav .toggle-button {
+    display: flex;
+    position: absolute;
+    right: 1.5rem;
+    left: auto;
+  }
+  nav .nav-links {
+    display: none;
+    width: 100%;
+    transition: all 0.3s ease 0s;
+  }
+  nav .nav-links ul, nav .nav-links li {
+    width: 100%;
+    font-size: 40px;
+    text-align: center;
+  }
+  nav .nav-links.active {
+    display: flex;
+    position: relative;
+    transition: all 0.3s ease 0s;
+  }
+}
 .img-principal {
   height: 30rem;
   width: 100%;
