--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;0,8..144,800;0,8..144,900;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700;1,8..144,800;1,8..144,900&display=swap');
 
 // Variables
 $color_tranparente: transparent;
@@ -12,6 +13,11 @@ $color_blanco: #edf0f1;
 @import 'navbar';
 @import 'img';
 @import 'botones';
+@import 'footer';
+
+body {
+    font-family: 'Roboto Serif', serif;
+}
 
 .container-principal {
     position: relative;
@@ -35,12 +41,6 @@ $color_blanco: #edf0f1;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 1194px) {
-    .f-title {
-        display: none;
-    }
 }
 
 @media (max-width: 998px) {
