--- a/css/_cards.scss
+++ b/css/_cards.scss
@@ -77,10 +77,41 @@
 }
 
 .articulo {
-    padding: 3rem;
-    border: 1px solid $color_negro;
-    border-radius: 1rem;
-    // width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    width: 100%;
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: contain; // Cambiamos 'cover' a 'contain'
+    }
+    
+    .articulo-contenido {
+        padding: 20px;
+    
+        h3 {
+          margin-top: 0;
+        }
+    }
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+
+        .card-content {
+        flex: 1;
+        }
+
+        img {
+            width: 40%;
+            max-width: none;
+        }
+    }
 }
 
 .articulo-boton {
@@ -105,46 +136,4 @@
         flex-direction: column;
         align-items: center;
     }
-}
-
-$parallax-bg-image: url('https://images.unsplash.com/photo-1583454110551-21f2fa2afe61?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80');
-
-.section-absoluto {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  
-  .absoluto-layer {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    
-    &.layer-bg {
-      background-image: $parallax-bg-image;
-      z-index: -1;
-    }
-    
-    &.layer-contenido {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      z-index: 1;
-      color: white;
-      
-      h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-      }
-      
-      p {
-        font-size: 1.5rem;
-      }
-    }
-  }
 }
