--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -6,6 +6,7 @@
 $color_tranparente: transparent;
 $color_negro: #24252A;
 $color_blanco: #edf0f1;
+$parallax-bg-image: url('../img/sections/img-absolute.jpg');
 
 @import 'header';
 @import 'beadcrumb';
@@ -41,6 +42,47 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+.section-absoluto {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  
+  .absoluto-layer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
+    &.layer-bg {
+      background-image: $parallax-bg-image;
+      z-index: -1;
+    }
+    
+    &.layer-contenido {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      z-index: 1;
+      color: white;
+      
+      h1 {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+      }
+      
+      p {
+        font-size: 1.5rem;
+      }
+    }
+  }
 }
 
 @media (max-width: 998px) {
