--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,14 @@ nav {
   background-color: transparent;
 }
 
+.img_animate {
+  transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.img_animate:hover {
+  transform: scale(0.9);
+}
+
 .card {
   width: 17rem;
 }
@@ -79,12 +87,12 @@ nav {
 .articulo {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
+  border: 1px solid #edf0f1;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px #24252A;
   margin: 10px;
-  width: 100%;
+  width: 80%;
 }
 .articulo img {
   width: 100%;
@@ -97,12 +105,17 @@ nav {
 .articulo .articulo-contenido h3 {
   margin-top: 0;
 }
+.articulo .articulo-contenido .articulo-boton {
+  justify-content: flex-end;
+  align-items: center;
+}
 @media (min-width: 768px) {
   .articulo {
     flex-direction: row;
   }
-  .articulo .card-content {
-    flex: 1;
+  .articulo .articulo-contenido {
+    justify-content: center;
+    align-items: center;
   }
   .articulo img {
     width: 40%;
@@ -133,6 +146,85 @@ nav {
     align-items: center;
   }
 }
+.marca {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  width: 100%;
+}
+.marca .marca-image img {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: contain;
+  border-radius: 10px;
+}
+.marca .marca-contenido {
+  display: flex;
+  padding: 20px;
+}
+.marca .marca-contenido h3 {
+  margin-top: 0;
+}
+@media (min-width: 992px) {
+  .marca.marca {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 768px) {
+  .marca {
+    align-items: center;
+    justify-content: center;
+  }
+  .marca .marca-contenido {
+    display: 1;
+  }
+  .marca .marca-image {
+    width: 40%;
+    max-height: none;
+  }
+}
+
+.vendidos {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  width: 100%;
+}
+.vendidos .vendidos-image img {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: contain;
+}
+.vendidos .vendidos-content {
+  padding: 20px;
+}
+.vendidos .vendidos-content h3 {
+  margin-top: 0;
+}
+@media (min-width: 768px) {
+  .vendidos {
+    flex-direction: row;
+  }
+  .vendidos .vendidos-content {
+    flex: 1;
+  }
+  .vendidos .vendidos-image {
+    width: 40%;
+    max-height: none;
+  }
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -310,11 +402,16 @@ body {
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 
+.texto-sombreado {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 .section-absoluto {
   position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  margin: 2rem 0;
 }
 .section-absoluto .absoluto-layer {
   position: absolute;
@@ -343,6 +440,58 @@ body {
 }
 .section-absoluto .absoluto-layer.layer-contenido p {
   font-size: 1.5rem;
+}
+@media (max-width: 535px) {
+  .section-absoluto .absoluto-layer.layer-contenido h1 {
+    font-size: 2.1rem;
+  }
+  .section-absoluto .absoluto-layer.layer-contenido p {
+    font-size: 1.1rem;
+  }
+}
+
+.section-absoluto-regalo {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  margin: 2rem 0;
+}
+.section-absoluto-regalo .absoluto-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.section-absoluto-regalo .absoluto-layer.layer-bg {
+  background-image: url("../img/sections/img-regalo.jpg");
+  z-index: -1;
+}
+.section-absoluto-regalo .absoluto-layer.layer-contenido {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 1;
+  color: white;
+}
+.section-absoluto-regalo .absoluto-layer.layer-contenido h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.section-absoluto-regalo .absoluto-layer.layer-contenido p {
+  font-size: 1.5rem;
+}
+@media (max-width: 535px) {
+  .section-absoluto-regalo .absoluto-layer.layer-contenido h1 {
+    font-size: 2.1rem;
+  }
+  .section-absoluto-regalo .absoluto-layer.layer-contenido p {
+    font-size: 1.1rem;
+  }
 }
 
 @media (max-width: 998px) {
