--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -44,45 +44,113 @@ body {
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 
+.texto-sombreado {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 
 .section-absoluto {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  
-  .absoluto-layer {
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    height: 100vh;
+    overflow: hidden;
+    margin: 2rem 0;
+
+    .absoluto-layer {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+
+        &.layer-bg {
+            background-image: $parallax-bg-image;
+            z-index: -1;
+        }
+
+        &.layer-contenido {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            z-index: 1;
+            color: white;
+
+            h1 {
+                font-size: 3rem;
+                margin-bottom: 1rem;
+            }
+
+            p {
+                font-size: 1.5rem;
+            }
+
+            @media (max-width: 535px) {
+                h1 {
+                    font-size: 2.1rem;
+                }
     
-    &.layer-bg {
-      background-image: $parallax-bg-image;
-      z-index: -1;
+                p {
+                    font-size: 1.1rem;
+                }
+            }
+
+        }
     }
+}
+
+.section-absoluto-regalo {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    margin: 2rem 0;
+
+    .absoluto-layer {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+
+        &.layer-bg {
+            background-image: url('../img/sections/img-regalo.jpg');
+            z-index: -1;
+        }
+
+        &.layer-contenido {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            z-index: 1;
+            color: white;
+
+            h1 {
+                font-size: 3rem;
+                margin-bottom: 1rem;
+            }
+
+            p {
+                font-size: 1.5rem;
+            }
+
+            @media (max-width: 535px) {
+                h1 {
+                    font-size: 2.1rem;
+                }
     
-    &.layer-contenido {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      z-index: 1;
-      color: white;
-      
-      h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-      }
-      
-      p {
-        font-size: 1.5rem;
-      }
+                p {
+                    font-size: 1.1rem;
+                }
+            }
+
+        }
     }
-  }
 }
 
 @media (max-width: 998px) {
