--- a/css/estilos.css
+++ b/css/estilos.css
@@ -82,6 +82,7 @@ nav {
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .articulo {
@@ -92,7 +93,7 @@ nav {
   overflow: hidden;
   box-shadow: 0 2px 4px #24252A;
   margin: 10px;
-  width: 80%;
+  width: 230px;
 }
 .articulo img {
   width: 100%;
@@ -155,34 +156,44 @@ nav {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin: 10px;
   width: 100%;
+  padding: 1%;
+  position: relative;
 }
 .marca .marca-image img {
   width: 100%;
   height: auto;
-  max-height: 200px;
   object-fit: contain;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease;
 }
 .marca .marca-contenido {
   display: flex;
   padding: 20px;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.4s ease;
 }
 .marca .marca-contenido h3 {
   margin-top: 0;
 }
-@media (min-width: 992px) {
-  .marca.marca {
-    flex-direction: row;
-    flex-wrap: wrap;
+.marca:hover .marca-image {
+  transform: translateY(-7px);
+}
+.marca:hover .marca-contenido {
+  opacity: 1;
+}
+@media (max-width: 992px) {
+  .marca .marca-contenido {
+    display: none;
   }
 }
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .marca {
     align-items: center;
     justify-content: center;
-  }
-  .marca .marca-contenido {
-    display: 1;
   }
   .marca .marca-image {
     width: 40%;
@@ -220,6 +231,57 @@ nav {
     flex: 1;
   }
   .vendidos .vendidos-image {
+    width: 40%;
+    max-height: none;
+  }
+}
+
+.aviso {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  width: 100%;
+}
+.aviso .aviso-image img {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: contain;
+  border-radius: 10px;
+}
+.aviso .aviso-contenido {
+  display: flex;
+  flex-direction: column;
+}
+.aviso .aviso-contenido h3 {
+  text-align: center;
+}
+.aviso .aviso-contenido {
+  display: flex;
+  padding: 20px;
+}
+.aviso .aviso-contenido h3 {
+  margin-top: 0;
+}
+@media (min-width: 992px) {
+  .aviso.aviso {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 768px) {
+  .aviso {
+    align-items: center;
+    justify-content: center;
+  }
+  .aviso .aviso-contenido {
+    display: 1;
+  }
+  .aviso .aviso-image {
     width: 40%;
     max-height: none;
   }
