--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:500");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;0,8..144,800;0,8..144,900;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700;1,8..144,800;1,8..144,900&display=swap");
 nav {
@@ -78,23 +78,6 @@ nav {
   }
 }
 
-.articulo-boton {
-  background: none;
-  border: none;
-  background-color: #00315d;
-  color: #edf0f1;
-  font-size: 1rem;
-  font-family: "Roboto Serif", serif;
-  padding: 10px 20px;
-  border-radius: 1rem;
-  transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-
-.articulo-boton:hover {
-  background-color: rgb(7, 90, 142);
-  transform: scale(0.9);
-}
-
 @media (max-width: 991px) {
   .contenedor-articulos {
     align-items: center;
@@ -103,12 +86,13 @@ nav {
 .marca {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
+  border: 1px solid #edf0f1;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px #24252A;
   margin: 10px;
-  width: 100%;
+  width: 280px;
+  height: 320px;
   padding: 1%;
   position: relative;
 }
@@ -116,16 +100,15 @@ nav {
   width: 100%;
   height: auto;
   object-fit: contain;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  top: 1px;
   transition: transform 0.3s ease;
 }
 .marca .marca-contenido {
+  margin-top: auto;
   display: flex;
   padding: 20px;
   justify-content: center;
+  align-items: end;
   opacity: 0;
   transition: opacity 0.4s ease;
 }
@@ -157,10 +140,10 @@ nav {
 .vendidos {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
+  border: 1px solid #edf0f1;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px #24252A;
   margin: 10px;
   width: 100%;
 }
@@ -199,10 +182,10 @@ nav {
 .aviso {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
+  border: 1px solid #edf0f1;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px #24252A;
   margin: 10px;
   max-width: 600px;
 }
@@ -284,20 +267,6 @@ nav li, nav a, nav button {
   text-decoration: none;
   list-style: none;
   transition: all 0.3s ease 0s;
-}
-nav button {
-  padding: 9px 25px;
-  background-color: rgb(0, 136, 169);
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-  color: #edf0f1;
-  font-family: "Montserrat", sans-serif;
-}
-nav button:hover {
-  background-color: rgba(0, 136, 169, 0.8);
-  transform: scale(0.9);
 }
 nav .toggle-button {
   display: none;
@@ -390,6 +359,47 @@ nav .toggle-button {
   transform: scale(0.9);
 }
 
+.articulo-boton {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  padding: 10px 20px;
+  transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+  background-color: #00315d;
+  color: #edf0f1;
+  border: none;
+  font-family: "Roboto Serif", sans-serif;
+  padding: 0.4rem 2rem;
+  border-radius: 1rem;
+  text-decoration: none;
+}
+
+.articulo-boton:hover {
+  transform: scale(0.9);
+  background-color: rgb(7, 90, 142);
+  color: #edf0f1;
+}
+
+.boton-cuenta {
+  padding: 9px 25px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  background-color: rgb(0, 136, 169);
+  color: #edf0f1;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  padding: 0.4rem 2rem;
+  border-radius: 50px;
+  text-decoration: none;
+}
+
+.boton-cuenta:hover {
+  transform: scale(0.9);
+  background-color: rgba(0, 136, 169, 0.8);
+  color: #edf0f1;
+}
+
 footer {
   background-color: #24252A;
 }
@@ -429,8 +439,23 @@ body {
   flex-direction: column;
 }
 
+.contenido-padding {
+  padding: 2% 8%;
+}
+
 .texto-sombreado {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.section-marcas {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 .section-absoluto {
@@ -543,9 +568,34 @@ body {
     flex-wrap: wrap;
   }
   .section-marcas {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
+  }
+}
+.acordion {
+  font-family: "Montserrat", sans-serif;
+}
+.acordion .acordion-item {
+  border: 1px solid #ddd;
+  margin-bottom: 10px;
+}
+.acordion .acordion-item .acordion-header {
+  font-weight: bold;
+  background-color: #f4f4f4;
+  padding: 10px;
+  cursor: pointer;
+}
+.acordion .acordion-item .acordion-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+  padding: 10px;
+}
+.acordion .acordion-item.active .acordion-content {
+  max-height: 500px;
+}
+@media (max-width: 768px) {
+  .acordion .acordion-item .acordion-header {
+    font-size: 18px;
   }
 }
 
