--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,200;0,8..144,300;0,8..144,400;0,8..144,500;0,8..144,600;0,8..144,700;0,8..144,800;0,8..144,900;1,8..144,100;1,8..144,200;1,8..144,300;1,8..144,400;1,8..144,500;1,8..144,600;1,8..144,700;1,8..144,800;1,8..144,900&display=swap');
 
@@ -49,10 +49,24 @@ body {
     flex-direction: column;
 }
 
+.contenido-padding {
+    padding: 2% 8%;
+}
+
 .texto-sombreado {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
+.section-marcas {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    margin-right: -15px;
+    margin-left: -15px;
+}
 
 .section-absoluto {
     position: relative;
@@ -186,8 +200,45 @@ body {
     }
 
     .section-marcas {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
+    }
+}
+
+.acordion {
+    font-family: 'Montserrat', sans-serif;
+
+    .acordion-item {
+        border: 1px solid #ddd;
+        margin-bottom: 10px;
+
+        .acordion-header {
+            font-weight: bold;
+            background-color: #f4f4f4;
+            padding: 10px;
+            cursor: pointer;
+        }
+
+        .acordion-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease-out;
+            padding: 10px;
+        }
+
+        &.active {
+
+            .acordion-content {
+                max-height: 500px;
+            }
+        }
+    }
+
+    @media (max-width: 768px) {
+        .acordion-item {
+            
+            .acordion-header {
+                font-size: 18px;
+            }
+        }
     }
 }
