--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -6,6 +6,7 @@
 $color_tranparente: transparent;
 $color_negro: #24252A;
 $color_blanco: #edf0f1;
+$color_principal: rgba(0, 136, 169, 1);
 $parallax-bg-image: url('../img/sections/img-absolute.jpg');
 
 @import 'header';
@@ -110,7 +111,7 @@ body {
                 h1 {
                     font-size: 2.1rem;
                 }
-    
+
                 p {
                     font-size: 1.1rem;
                 }
@@ -162,7 +163,7 @@ body {
                 h1 {
                     font-size: 2.1rem;
                 }
-    
+
                 p {
                     font-size: 1.1rem;
                 }
@@ -210,10 +211,14 @@ body {
     .acordion-item {
         border: 1px solid #ddd;
         margin-bottom: 10px;
+        border-radius: 1rem;
 
         .acordion-header {
+            border: none;
+            border-radius: 1rem;
             font-weight: bold;
-            background-color: #f4f4f4;
+            background-color: rgb(87, 167, 187);
+            color: $color_blanco;
             padding: 10px;
             cursor: pointer;
         }
@@ -235,7 +240,7 @@ body {
 
     @media (max-width: 768px) {
         .acordion-item {
-            
+
             .acordion-header {
                 font-size: 18px;
             }
