--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -45,9 +45,31 @@ body {
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 
+.texto-subrayado {
+    font-family: "Montserrat", sans-serif;
+    color: $color_principal;
+    text-decoration: underline;
+    transition: transform 0.3s ease;
+}
+.texto-subrayado:hover {
+    transform: scale(1.1); 
+}
+
+.centrar-h {
+    margin-right: auto!important;
+    margin-left: auto!important;
+}
+
 .contenido {
     display: flex;
     flex-direction: column;
+}
+
+.contenedor-marcas {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .contenido-padding {
@@ -243,6 +265,42 @@ body {
 
             .acordion-header {
                 font-size: 18px;
+            }
+        }
+    }
+}
+
+.carrusel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+
+    .carrusel-container {
+        display: flex;
+        align-items: center;
+        transition: transform 0.3s ease-in-out;
+
+        .carrusel-item {
+            flex: 0 0 calc(100% / 3);
+            // margin: 1% 2%;
+            padding: 5rem;
+            gap: 1rem;
+            img {
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+            }
+        }
+    }
+
+    @media (max-width: 769px) {
+        .carrusel-container {
+
+            .carrusel-item {
+                // flex: 0 0 100%;
             }
         }
     }
