--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -70,6 +70,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1px solid $color_principal;
+    border-radius: 1rem;
+    margin: 0 0 3rem 0;
+
+    h4 {
+        cursor: pointer;
+    }
 }
 
 .contenido-padding {
